fix: Column wrapping in Chrome

--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -248,6 +248,10 @@ img {
     li {
       break-inside: avoid-column;
     }
+
+    img {
+      display: block;
+    }
   }
 }
 
